--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,7 +6,7 @@
 <body>
   
   <header>
-    <h1>Welcome to CodeSpace Cat Portiflio.</h1>
+    <h1>Welcome to CodeSpace Cat Portiflio</h1>
     <img src="images/cat-codespace.png">
   </header>
 <!--Add a list section use <ul> tag together with the <li> tag to create unordered lists.-->
